// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButton
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={true}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className="ui-shared__button sg-u02dqw-button ui-shared__ripple-button"
      disabled={true}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-1vmosx6-root-button"
        data-test-id="Button"
        disabled={true}
        onClick={null}
      >
        <div
          className="sg-1vtrm1i-content"
        >
          Press me
        </div>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-hgw3or-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-1c7tyy7-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-hgw3or-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-1c7tyy7-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="regular"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="regular"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-1cs55nz-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-1h6ofnq-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="secondary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="secondary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button sg-x945ka-button ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="common__button ui-shared__button ui-shared__ripple-button sg-1y4oqzg-root-button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="sg-fpa50s-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple sg-fpa50s-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;
